--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "3.15.2"
 sqlparse = "0.4.4"
 typing-extensions = "4.12.2"
 poetry = "^1.8.4"
+django-environ = "^0.11.2"
 
 
 [tool.poetry.group.dev.dependencies]
