--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlparse = "0.4.4"
 typing-extensions = "4.12.2"
 poetry = "^1.8.4"
 django-environ = "^0.11.2"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
