--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ typing-extensions = "4.12.2"
 poetry = "^1.8.4"
 django-environ = "^0.11.2"
 djangorestframework-simplejwt = "^5.3.1"
+django-model-utils = "^5.0.0"
+pillow = "^11.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
