--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-environ = "^0.11.2"
 djangorestframework-simplejwt = "^5.3.1"
 django-model-utils = "^5.0.0"
 pillow = "^11.0.0"
+drf-yasg = "^1.21.8"
 
 
 [tool.poetry.group.dev.dependencies]
